// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integrations actions delete integration 1`] = `
Array [
  Object {
    "id": 1,
    "type": "DELETE_INTEGRATION_START",
  },
  Object {
    "id": 1,
    "type": "DELETE_INTEGRATION_SUCCESS",
  },
]
`;

exports[`integrations actions delete integration error 1`] = `
Array [
  Object {
    "id": 1,
    "type": "DELETE_INTEGRATION_START",
  },
  Object {
    "error": [Error: Request failed with status code 400],
    "reason": "Failed to delete the integration",
    "type": "DELETE_INTEGRATION_ERROR",
    "verbose": true,
  },
]
`;

exports[`integrations actions fetch integration fails 1`] = `
Array [
  Object {
    "id": "1",
    "type": "FETCH_INTEGRATION_START",
  },
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to fetch integration",
    "type": "FETCH_INTEGRATION_ERROR",
  },
]
`;

exports[`integrations actions fetch integration success 1`] = `
Array [
  Object {
    "id": "1",
    "type": "FETCH_INTEGRATION_START",
  },
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to fetch integration",
    "type": "FETCH_INTEGRATION_ERROR",
  },
]
`;

exports[`integrations actions fetch integration success waiting for authentication 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to fetch integration",
    "type": "FETCH_INTEGRATION_ERROR",
  },
]
`;

exports[`integrations actions fetch integrations 1`] = `
Array [
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
  Object {
    "resp": Array [
      Object {
        "id": 1,
        "name": "http",
      },
    ],
    "type": "FETCH_INTEGRATIONS_SUCCESS",
  },
]
`;

exports[`integrations actions on update success 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "email",
    },
    "type": "UPDATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
]
`;

exports[`integrations actions should do some action and redirect correctly on create email success 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "email",
    },
    "type": "CREATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
]
`;

exports[`integrations actions should do some action and redirect correctly on create email success 2`] = `"/app/settings/channels/email/1/forwarding"`;

exports[`integrations actions should do some action and redirect correctly on create smooch success 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "smooch",
    },
    "type": "CREATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
]
`;

exports[`integrations actions should do some action and redirect correctly on create smooch success 2`] = `"/app/settings/integrations/smooch/1/overview"`;

exports[`integrations actions should do some action and redirect correctly on create smooch_inside success 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "smooch_inside",
    },
    "type": "CREATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
]
`;

exports[`integrations actions should do some action and redirect correctly on create smooch_inside success 2`] = `"/app/settings/integrations/smooch_inside/1/installation"`;

exports[`integrations actions verifyEmailIntegration action should dispatch an EMAIL_INTEGRATION_VERIFIED action on error 1`] = `Array []`;

exports[`integrations actions verifyEmailIntegration action should dispatch an EMAIL_INTEGRATION_VERIFIED action on success 1`] = `
Array [
  Object {
    "integrationId": 1,
    "type": "EMAIL_INTEGRATION_VERIFIED",
  },
]
`;
